<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.sh4rewith</groupId>
	<artifactId>sh4rewithme-parent</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>Sh4reWith.me Parent POM</name>
	<modules>
		<module>../sh4rewithme-webapp</module>
		<module>../sh4rewithme-assembly</module>
		<module>../sh4rewithme-webtests</module>
		<module>../sh4rewithme-perf</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.release.version>3.1.1.RELEASE</spring.release.version>
		<spring-security.version>3.1.0.RELEASE</spring-security.version>
		<javamail.version>1.4</javamail.version>
		<gatling.version>1.4.6</gatling.version>

		<http.host>localhost</http.host>
		<http.port>9090</http.port>
		<webapp.name>sh4rewithme-webapp</webapp.name>

	</properties>

	<repositories>
		<repository>
			<id>people.apache.snapshots</id>
			<url>http://repository.apache.org/content/groups/snapshots-group/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>excilys</id>
			<name>Excilys Repository</name>
			<url>http://repository.excilys.com/content/groups/public</url>
		</repository>

		<repository>
			<id>sonatype-oss-releases</id>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</repository>
		<repository>
			<id>devopsmercenaries-oss</id>
			<url>http://dl.bintray.com/content/dbaeli/devopsmercenaries</url>
		</repository>

	</repositories>

	 <distributionManagement>
            <repository>
              <id>bintray-dbaeli-devopsmercenaries</id>
              <url>https://api.bintray.com/maven/dbaeli/devopsmercenaries/sh4rewithme</url>
            </repository>
            <snapshotRepository>
              <id>bintray-dbaeli-devopsmercenaries</id>
              <url>https://api.bintray.com/maven/dbaeli/devopsmercenaries/sh4rewithme</url>
            </snapshotRepository>
        </distributionManagement>

	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<name>Apache Snapshots</name>
			<url>http://repository.apache.org/content/groups/snapshots-group/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>excilys</id>
			<name>Excilys Repository</name>
			<url>http://repository.excilys.com/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype-oss-releases</id>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</pluginRepository>
		<pluginRepository>
			<id>devopsmercenaries-oss</id>
			<url>http://dl.bintray.com/content/dbaeli/devopsmercenaries</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-web-api</artifactId>
				<version>6.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.release.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>1.9.3</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.1</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>2.2</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>log4j-over-slf4j</artifactId>
				<version>1.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-jdk14</artifactId>
				<version>1.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-openid</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.nekohtml</groupId>
				<artifactId>nekohtml</artifactId>
				<version>1.9.15</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-mongodb</artifactId>
				<version>1.0.1.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>11.0</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>4.2.0.Final</version>
			</dependency>
			<dependency>
				<groupId>org.thymeleaf</groupId>
				<artifactId>thymeleaf</artifactId>
				<version>2.0.4</version>
			</dependency>
			<dependency>
				<groupId>org.thymeleaf</groupId>
				<artifactId>thymeleaf-spring3</artifactId>
				<version>2.0.4</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.ocpsoft</groupId>
				<artifactId>ocpsoft-pretty-time</artifactId>
				<version>1.0.7</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.0.1</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils-core</artifactId>
				<version>1.8.3</version>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>${javamail.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.pilato.spring</groupId>
				<artifactId>spring-elasticsearch</artifactId>
				<version>0.0.3_LM</version>
			</dependency>
			<dependency>
				<groupId>org.elasticsearch</groupId>
				<artifactId>elasticsearch</artifactId>
				<version>0.20.6</version>
			</dependency>
			<dependency>
				<groupId>org.jmxtrans.embedded</groupId>
				<artifactId>embedded-jmxtrans</artifactId>
				<version>1.0.4</version>
			</dependency>
			<!-- <dependency> -->
			<!-- jython required by the GraphitePickleWriter -->
			<!-- <groupId>org.python</groupId> -->
			<!-- <artifactId>jython</artifactId> -->
			<!-- <version>2.5.3</version> -->
			<!-- </dependency> -->
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
                                <plugin>
                                  <groupId>org.apache.maven.plugins</groupId>
                                  <artifactId>maven-release-plugin</artifactId>
                                  <version>2.4</version>
                                </plugin>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.0</version>
					<configuration>
						<port>${http.port}</port>
						<path>/${project.artifactId}</path>
						<contextFile>${baseDir}/src/main/webapp/META-INF/context.xml</contextFile>
						<systemProperties>
							<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
						</systemProperties>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>javax.mail</groupId>
							<artifactId>mail</artifactId>
							<version>${javamail.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
